@@ -6,6 +6,9 @@ import com.pragma.order_service.application.dto.request.UpdateOrderRequest;
 import com.pragma.order_service.application.dto.response.OrderItemResponse;
 import com.pragma.order_service.application.dto.response.OrderResponse;
 import com.pragma.order_service.application.mapper.OrderDtoMapper;
+import com.pragma.order_service.domain.api.ICreateOrderServicePort;
+import com.pragma.order_service.domain.api.IListOrdersServicePort;
+import com.pragma.order_service.domain.api.IUpdateOrderServicePort;
 import com.pragma.order_service.domain.model.command.CreateOrderCommand;
 import com.pragma.order_service.domain.model.command.CreateOrderItemCommand;
 import com.pragma.order_service.domain.model.command.UpdateOrderCommand;
@@ -13,9 +16,6 @@ import com.pragma.order_service.domain.model.query.OrderDetail;
 import com.pragma.order_service.domain.model.query.OrderItemQueryModel;
 import com.pragma.order_service.domain.model.query.OrderQueryModel;
 import com.pragma.order_service.domain.model.query.PageResult;
-import com.pragma.order_service.domain.api.ICreateOrderServicePort;
-import com.pragma.order_service.domain.api.IListOrdersServicePort;
-import com.pragma.order_service.domain.api.IUpdateOrderServicePort;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -77,9 +77,11 @@ class OrderHandlerTest {
                 .restaurantId(1L)
                 .restaurantName("El buen sabor")
                 .status("PENDIENTE")
+                .totalPrice(BigDecimal.valueOf(65000))
                 .dishId(10L)
                 .dishName("Hamburguesa triple")
                 .quantity(BigDecimal.valueOf(2))
+                .dishPrice(BigDecimal.valueOf(30000))
                 .createdAt(now)
                 .updatedAt(now)
                 .build();
@@ -91,9 +93,11 @@ class OrderHandlerTest {
                 .restaurantId(1L)
                 .restaurantName("El buen sabor")
                 .status("PENDIENTE")
+                .totalPrice(BigDecimal.valueOf(65000))
                 .dishId(11L)
                 .dishName("Lomo saltado")
                 .quantity(BigDecimal.ONE)
+                .dishPrice(BigDecimal.valueOf(5000))
                 .createdAt(now)
                 .updatedAt(now)
                 .build();
@@ -102,12 +106,14 @@ class OrderHandlerTest {
                 .dishId(10L)
                 .name("Hamburguesa triple")
                 .quantity(BigDecimal.valueOf(2))
+                .price(BigDecimal.valueOf(30000))
                 .build();
 
         OrderItemResponse itemResponse2 = OrderItemResponse.builder()
                 .dishId(11L)
                 .name("Lomo saltado")
                 .quantity(BigDecimal.ONE)
+                .price(BigDecimal.valueOf(5000))
                 .build();
 
         OrderResponse orderResponse = OrderResponse.builder()
@@ -117,6 +123,7 @@ class OrderHandlerTest {
                 .restaurantId(1L)
                 .nameRestaurant("El buen sabor")
                 .status("PENDIENTE")
+                .totalPrice(BigDecimal.valueOf(65000))
                 .items(List.of(itemResponse1, itemResponse2))
                 .createdAt(now)
                 .updatedAt(now)
@@ -130,18 +137,10 @@ class OrderHandlerTest {
         StepVerifier.create(orderApplicationService.create(request, "token-test"))
                 .assertNext(result -> {
                     Assertions.assertEquals(100L, result.id());
-                    Assertions.assertEquals(50L, result.customerId());
-                    Assertions.assertEquals("Brandon Briones", result.nameCustomer());
-                    Assertions.assertEquals(1L, result.restaurantId());
-                    Assertions.assertEquals("El buen sabor", result.nameRestaurant());
-                    Assertions.assertEquals("PENDIENTE", result.status());
+                    Assertions.assertEquals(BigDecimal.valueOf(65000), result.totalPrice());
                     Assertions.assertEquals(2, result.items().size());
-                    Assertions.assertEquals(10L, result.items().getFirst().dishId());
-                    Assertions.assertEquals("Hamburguesa triple", result.items().get(0).name());
-                    Assertions.assertEquals(BigDecimal.valueOf(2), result.items().get(0).quantity());
-                    Assertions.assertEquals(11L, result.items().get(1).dishId());
-                    Assertions.assertEquals("Lomo saltado", result.items().get(1).name());
-                    Assertions.assertEquals(BigDecimal.ONE, result.items().get(1).quantity());
+                    Assertions.assertEquals(BigDecimal.valueOf(30000), result.items().get(0).price());
+                    Assertions.assertEquals(BigDecimal.valueOf(5000), result.items().get(1).price());
                 })
                 .verifyComplete();
     }
@@ -156,11 +155,13 @@ class OrderHandlerTest {
                 .nameRestaurant("El Buen Sabor")
                 .status("PENDIENTE")
                 .employeeAssignedId(null)
+                .totalPrice(BigDecimal.valueOf(40000))
                 .items(List.of(
                         OrderItemQueryModel.builder()
                                 .dishId(10L)
                                 .name("Pizza")
                                 .quantity(BigDecimal.valueOf(2))
+                                .price(BigDecimal.valueOf(20000))
                                 .build()
                 ))
                 .createdAt(LocalDateTime.now())
@@ -177,18 +178,20 @@ class OrderHandlerTest {
 
         OrderItemResponse itemResponse1 = OrderItemResponse.builder()
                 .dishId(10L)
-                .name("Hamburguesa triple")
+                .name("Pizza")
                 .quantity(BigDecimal.valueOf(2))
+                .price(BigDecimal.valueOf(20000))
                 .build();
 
         OrderResponse orderResponse = OrderResponse.builder()
                 .id(100L)
-                .customerId(50L)
-                .nameCustomer("Brandon Briones")
+                .customerId(20L)
+                .nameCustomer("Juan Perez")
                 .restaurantId(1L)
-                .nameRestaurant("El buen sabor")
+                .nameRestaurant("El Buen Sabor")
                 .status("PENDIENTE")
-                .employeeAssignedId(30L)
+                .employeeAssignedId(null)
+                .totalPrice(BigDecimal.valueOf(40000))
                 .items(List.of(itemResponse1))
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
@@ -202,9 +205,8 @@ class OrderHandlerTest {
         StepVerifier.create(orderApplicationService.list("token-test", "PENDIENTE", 0, 10))
                 .assertNext(response -> {
                     Assertions.assertEquals(1, response.content().size());
-                    Assertions.assertEquals(1L, response.totalElements());
-                    Assertions.assertEquals(1, response.totalPages());
-                    Assertions.assertEquals("PENDIENTE", response.content().getFirst().status());
+                    Assertions.assertEquals(BigDecimal.valueOf(40000), response.content().getFirst().totalPrice());
+                    Assertions.assertEquals(BigDecimal.valueOf(20000), response.content().getFirst().items().getFirst().price());
                 })
                 .verifyComplete();
     }
@@ -214,53 +216,14 @@ class OrderHandlerTest {
         UpdateOrderRequest request = new UpdateOrderRequest("ENTREGADO", "151370");
         UpdateOrderCommand command = new UpdateOrderCommand("ENTREGADO", "151370");
 
-        LocalDateTime now = LocalDateTime.now();
-
-        OrderDetail row1 = OrderDetail.builder()
-                .orderId(100L)
-                .customerId(50L)
-                .customerName("Brandon Briones")
-                .restaurantId(1L)
-                .restaurantName("El buen sabor")
-                .status("ENTREGADO")
-                .employeeAssignedId(30L)
-                .dishId(10L)
-                .dishName("Hamburguesa triple")
-                .quantity(BigDecimal.valueOf(2))
-                .createdAt(now)
-                .updatedAt(now)
-                .build();
-
-        OrderItemResponse itemResponse = OrderItemResponse.builder()
-                .dishId(10L)
-                .name("Hamburguesa triple")
-                .quantity(BigDecimal.valueOf(2))
-                .build();
-
-        OrderResponse orderResponse = OrderResponse.builder()
-                .id(100L)
-                .customerId(50L)
-                .nameCustomer("Brandon Briones")
-                .restaurantId(1L)
-                .nameRestaurant("El buen sabor")
-                .status("ENTREGADO")
-                .employeeAssignedId(30L)
-                .items(List.of(itemResponse))
-                .createdAt(now)
-                .updatedAt(now)
-                .build();
-
         when(orderDtoMapper.toUpdateStatusCommand(any())).thenReturn(command);
-        when(orderDtoMapper.toItemResponse(any())).thenReturn(itemResponse);
-        when(orderDtoMapper.toResponse(any(), anyList())).thenReturn(orderResponse);
         when(updateOrderStatusUseCase.update(anyLong(), any(), anyString()))
-                .thenReturn(Mono.just(List.of(row1)));
+                .thenReturn(Mono.just(100L));
 
         StepVerifier.create(orderApplicationService.updateStatus(100L, request, "token-test"))
                 .assertNext(result -> {
                     Assertions.assertEquals(100L, result.id());
-                    Assertions.assertEquals("ENTREGADO", result.status());
-                    Assertions.assertEquals(30L, result.employeeAssignedId());
+                    Assertions.assertEquals("Estado del pedido actualizado exitosamente", result.message());
                 })
                 .verifyComplete();
     }
